# OneFarm

./: .gitignore  README.md  REVERT_INSTRUCTIONS.md  config.json  gen_icons.rs
Farm - CLI/: Cargo.toml  README.md  positions.json
Farm - CLI/src/: adb.rs  capture.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  capture.rs  main.rs  recognize_fast.rs
src-tauri/src/automation/: buy_seeds.rs  buy_tools.rs  check_seeds.rs  harvest_sell.rs  mod.rs  utils.rs
src-tauri/src/commands/: config.rs  device.rs  mod.rs  script.rs  session.rs  template.rs
src-tauri/src/config/: mod.rs  persisted.rs  state.rs
src-tauri/src/core/: capture.rs  mod.rs  recognize.rs
src-tauri/src/emulator/: adb.rs  ldplayer.rs  mod.rs
static/: index.html  main.js  style.css
static/css/: components.css  layout.css  main.css  variables.css
static/js/: api.js  app.js  buy_seeds_modal.js  console.js  devices.js  handlers.js  modals.js  settings_modal.js  theme.js
templates/seeds/: names.json
templates/tools/: names.json
