[package]
name = "ultra-fast-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
image = "0.25.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
windows = { version = "0.62.2", features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi_Common", "Win32_UI_HiDpi", "Win32_System_WinRT", "Win32_System_WinRT_Graphics_Capture", "Win32_System_WinRT_Direct3D11", "Graphics_Capture", "Graphics_DirectX_Direct3D11"] }
rand = "0.8.5"
base64 = "0.22.1"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
